# Embedded

./: CMakeLists.txt  main.c
driver/: CMakeLists.txt
driver/irline/: README.md  irline.c
driver/magnometer/: magnometer.c
driver/motor/: motor.c  motor.h
driver/ultrasonic/: CMakeLists.txt  README.md  ultrasonic.c  ultrasonic.h
driver/wheelEncoder/: wheelEncoder.c
driver/wifi/: README.md
